# Digital-Piano

./: .gitignore  CMakeLists.txt  DigitalPiano.h  GLOBALVARIABLES.h  Keys.h  MAPPER.h  MidiParser.h  README.md  RtMidi.cpp  SynthesiaClone.sln  SynthesiaClone.vcxproj  SynthesiaClone.vcxproj.filters  arab2.mid  key.h  main.cpp  olcPixelGameEngineGL.h  theEnd.mid  tsf.h  vectors.h
MIDIFILES/: REV.mid  mozartk545.mid  nobusesam.mid  onesummersday.mid  op9no2.mid  pokeCredits.mid  reverie.mid
enc_temp_folder/4e755b79c6c829224abf0aaddc2dbd5/: DigitalPiano.h
